tests/suite/snapshots/integration__suite__pass_mir__snapshot_mir_basic.snap
---
source: tests/suite/pass_mir.rs
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "main",
            params: [],
            evidence_params: [],
            ret_type: Unit,
            body: [
                Let {
                    name: "x",
                    typ: Unit,
                    expr: Literal(
                        Int(
                            42,
                        ),
                    ),
                },
                Return(
                    Literal(
                        Unit,
                    ),
                ),
            ],
        },
    ],
    externals: [],
    evidence_table: EvidenceTable {
        entries: [],
    },
}
