tests/suite/snapshots/integration__suite__pass_mir__snapshot_mir_with_control_flow.snap
---
source: tests/suite/pass_mir.rs
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "main",
            params: [],
            evidence_params: [],
            ret_type: Unit,
            body: [
                Expr(
                    If {
                        cond: Literal(
                            Bool(
                                true,
                            ),
                        ),
                        then_body: [
                            Return(
                                Literal(
                                    Unit,
                                ),
                            ),
                        ],
                        else_body: Some(
                            [
                                Return(
                                    Literal(
                                        Unit,
                                    ),
                                ),
                            ],
                        ),
                    },
                ),
            ],
        },
    ],
    externals: [],
    evidence_table: EvidenceTable {
        entries: [],
    },
}
